# CIA_MLOps_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/pages/: champions.rst  spells.rst  structures.rst  utilities.rst
examples/cookiecutter/projet/hooks/: pre_gen_project.py
examples/cookiecutter/projet/{{ cookiecutter.projet_slug }}/: README.md
examples/hydra/: exemple_avance.py  exemple_basique.py
examples/hydra/config/: config.yaml
examples/hydra/config/membre/: loic.yaml  theo.yaml
examples/hydra/config/projet/: ffa.yaml
examples/mlflow_lightning_tensorboard/: exemple.py
exemples/cookiecutter/projet/: cookiecutter.json
exemples/hydra/config/: config.yaml
exemples/hydra/config/projet/: manga.yaml
exemples/mlflow_lightning_tensorboard/: exemple.py
exemples/mlflow_seul/: exemple.py
exemples/sphinx/: main.py  utils.py
exemples/sphinx/champions/: __init__.py  base_champion.py  teemo.py  yasuo.py
exemples/sphinx/spells/: __init__.py  base_spell.py  blinding_dart.py  noxious_trap.py  steel_tempest.py
exemples/sphinx/structure/: base_structure.py  nexus.py
exemples/sphinx/structures/: __init__.py  inhibitor.py  tower.py
outputs/2023-10-07/14-27-48/.hydra/: config.yaml  hydra.yaml
outputs/2023-10-07/14-38-09/.hydra/: hydra.yaml
outputs/2023-10-07/14-38-10/.hydra/: hydra.yaml
outputs/2023-10-07/14-38-40/.hydra/: hydra.yaml
outputs/2023-10-07/14-39-25/.hydra/: hydra.yaml
outputs/2023-10-07/14-40-09/.hydra/: hydra.yaml
outputs/2023-10-07/14-42-04/.hydra/: hydra.yaml
(+33 files in other folders)
