[tool.poetry]
name = "cia-mlops-tools"
version = "0.1.0"
description = "CIA MLOps tutorial"
authors = ["Loïc <baret.loic.1@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cookiecutter = "^2.3.1"
mlflow = "^2.7.1"
lightning = "^2.0.9"
hydra-core = "^1.3.2"
tensorboard = "^2.14.0"
ipykernel = "^6.25.2"
poethepoet = "^0.24.1"
sphinx = "^7.2.6"
safety = "^2.3.5"
ruff = "^0.1.5"

[tool.poe.tasks]
torch-cuda = "pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
